[project]
name = "krewlyzer"
version = "0.1.3"
description = "Feature extraction tools for circulating tumor DNA from GRCh37 aligned BAM files"
authors = [{name = "Ronak Shah", email = "shahr2@mskcc.org"}]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.3",
    "pysam>=0.20.0",
    "pandas>=2.0.0",
    "biopython>=1.81",

    "scikit-misc>=0.1.4",
    "scipy>=1.10.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
"Homepage" = "https://github.com/msk-access/krewlyzer"

[project.scripts]
krewlyzer = "krewlyzer.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
